0205: Very rough mixed notes about TT07 and starting TT04 testing

--- a/0204-2024-05-25.md
+++ b/0204-2024-05-25.md
@@ -327,139 +327,21 @@ It takes about 70sec to simulate each frame.
 Frames are written to the current directory (`./src/rbz_basic_frame-???.ppm`).
 
 
-## iverilog 13-dev error messages when doing RTL sim
-
-When I tried doing TT04 RTL simulation with `make`, iverlog 13 (pre-release) gives all these errors, which are maybe a linting or `-g2012` thing:
-
-<details>
-<summary>Click to expand...</summary>
-
-<pre>
-rm -f results.xml
-make -f Makefile results.xml
-make[1]: Entering directory '/home/anton/projects/bringup-tt04-raybox-zero/src'
-mkdir -p sim_build
-/usr/local/bin/iverilog -o sim_build/sim.vvp -D COCOTB_SIM=1 -s tb -I /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl -f sim_build/cmds.f -g2012   /home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/fixed_point_params.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/helpers.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/debug_overlay.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/lzc.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/map_overlay.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/map_rom.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/reciprocal.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/row_render.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/vga_mux.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/vga_sync.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v /home/anton/projects/bringup-tt04-raybox-zero/src/top.v
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:28: error: Unable to bind wire/reg/memory `uo_out['sd7:'sd2]' in `tb'
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:39:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:28: error: Unable to elaborate r-value: uo_out['sd7:'sd2]
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:32: error: Unable to bind wire/reg/memory `uo_out['sd0]' in `tb'
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:39:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:32: error: Unable to elaborate r-value: uo_out['sd0]
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:33: error: Unable to bind wire/reg/memory `uo_out['sd1]' in `tb'
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:39:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:33: error: Unable to elaborate r-value: uo_out['sd1]
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:34: error: Unable to bind wire/reg/memory `uio_out['sd0]' in `tb'
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:41:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:34: error: Unable to elaborate r-value: uio_out['sd0]
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:35: error: Unable to bind wire/reg/memory `uio_out['sd1]' in `tb'
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:41:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:35: error: Unable to elaborate r-value: uio_out['sd1]
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:72: error: Unable to bind wire/reg/memory `traced_texVinit' in `tb.uut.rbzero'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:209:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:72: error: Unable to elaborate r-value: (texV)+(traced_texVinit)
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:78: error: Unable to bind wire/reg/memory `traced_wall' in `tb.uut.rbzero'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:204:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:78: error: Failed to elaborate port expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:79: error: Unable to bind wire/reg/memory `traced_side' in `tb.uut.rbzero'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:205:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:79: error: Failed to elaborate port expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:80: error: Unable to bind wire/reg/memory `traced_size' in `tb.uut.rbzero'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:206:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:80: error: Failed to elaborate port expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:81: error: Unable to bind wire/reg/memory `traced_texu' in `tb.uut.rbzero'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:207:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:81: error: Failed to elaborate port expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:83: error: Unable to bind wire/reg/memory `floor_leak' in `tb.uut.rbzero'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:136:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:83: error: Failed to elaborate port expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:123: error: Unable to bind wire/reg/memory `ready_buffer' in `tb.uut.rbzero.pov'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:181:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:126: error: Unable to bind wire/reg/memory `spi_done' in `tb.uut.rbzero.pov'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:166:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:126: error: Unable to elaborate condition expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:91: error: Unable to bind wire/reg/memory `spi_counter' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:101:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:91: error: Unable to elaborate r-value: (spi_counter)==((SPI_CMD_BITS)-('sd1))
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:93: error: Unable to bind wire/reg/memory `spi_counter' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:101:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:95: error: Unable to bind wire/reg/memory `spi_cmd' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:100:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:92: error: Unable to elaborate r-value: (spi_counter)==(((SPI_CMD_BITS)+(((spi_cmd)==(CMD_SKY))?(LEN_SKY):(((spi_cmd)==(CMD_FLOOR))?(LEN_FLOOR):(LEN_LEAK))))-('sd1))
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:49: error: Unable to bind wire/reg/memory `spi_cmd' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:100:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:49: error: Unable to bind wire/reg/memory `CMD_SKY' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:83:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:49: error: Unable to elaborate condition expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:50: error: Unable to bind wire/reg/memory `spi_cmd' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:100:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:50: error: Unable to bind wire/reg/memory `CMD_FLOOR' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:84:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:50: error: Unable to elaborate condition expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:51: error: Unable to bind wire/reg/memory `spi_cmd' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:100:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:51: error: Unable to bind wire/reg/memory `CMD_LEAK' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:85:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:51: error: Unable to elaborate condition expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:52: error: Unable to bind wire/reg/memory `ss_active' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:75:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:52: error: Unable to bind wire/reg/memory `sclk_rise' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:70:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:52: error: Unable to bind wire/reg/memory `spi_frame_end' in `tb.uut.rbzero.spi_registers'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:92:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:52: error: Unable to elaborate condition expression.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:128: error: Net color_sky is not defined in this context.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:134:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:128: error: Output port expression must support continuous assignment.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:128:      : Port 6 (sky) of spi_registers is connected to color_sky
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:129: error: Net color_floor is not defined in this context.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:135:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:129: error: Output port expression must support continuous assignment.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:129:      : Port 7 (floor) of spi_registers is connected to color_floor
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:130: error: Net floor_leak is not defined in this context.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:136:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:130: error: Output port expression must support continuous assignment.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:130:      : Port 8 (leak) of spi_registers is connected to floor_leak
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:151: error: Unable to bind wire/reg/memory `mul_out[('sd10)-('sd1):-('sd10)]' in `tb.uut.rbzero.wall_tracer'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:229:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:151: error: Unable to bind wire/reg/memory `side' in `tb.uut.rbzero.wall_tracer'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:246:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:151: error: Unable to elaborate r-value: (mul_out[('sd10)-('sd1):-('sd10)])+((side)?(playerX):(playerY))
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:152: error: Unable to bind wire/reg/memory `side' in `tb.uut.rbzero.wall_tracer'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:246:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:152: error: Unable to elaborate r-value: (side)?(ryi):(~(rxi))
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:219: error: Unable to bind wire/reg/memory `state' in `tb.uut.rbzero.wall_tracer'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:247:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:218: error: Unable to elaborate r-value: ((state)==(TracePrepX))?(stepDistX):(((state)==(TracePrepY))?(stepDistY):(((state)==(CalcTexU))?((side)?(rayDirX):(rayDirY)):((rcp_out)-(HALF_SIZE_CLIP))))
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:225: error: Unable to bind wire/reg/memory `state' in `tb.uut.rbzero.wall_tracer'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:247:      : A symbol with that name was declared here. Check for declaration after use.
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:224: error: Unable to elaborate r-value: ((state)==(TracePrepX))?(partialX):(((state)==(TracePrepY))?(partialY):(visualWallDist))
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:94: error: Unable to bind wire/reg/memory `traced_texa' in `tb.uut.rbzero'
-/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:208:      : A symbol with that name was declared here. Check for declaration after use.
-59 error(s) during elaboration.
-make[1]: *** [/home/anton/ttsetup@tt04/venv/lib/python3.9/site-packages/cocotb/share/makefiles/simulators/Makefile.icarus:81: sim_build/sim.vvp] Error 59
-make[1]: Leaving directory '/home/anton/projects/bringup-tt04-raybox-zero/src'
-make: *** [/home/anton/ttsetup@tt04/venv/lib/python3.9/site-packages/cocotb/share/makefiles/Makefile.inc:40: sim] Error 2
-</pre>
-
-</details>
-
-
 ## Create TT07 project wrapper for raybox-zero
 
 For now, I will specifically use the `1.0` tag, to compare synth/simulation results with what TT04 produced. Then I will look at possible newer versions or other improvements/fixes.
 
 1.  Generate a new repo from [tt07-verilog-template]: https://github.com/algofoogle/tt07-raybox-zero
-2.  Clone the repo
-3.  Add [raybox-zero] tag `1.0` (we might change it later) as a submodule:
+2.  Enable option for GitHub Actions to publish to GitHub Pages.
+3.  Clone the repo
+4.  Add [raybox-zero] tag `1.0` (we might change it later) as a submodule:
     ```bash
     git submodule add git@github.com:algofoogle/raybox-zero src/raybox-zero
     pushd src/raybox-zero
     git checkout 1.0
     popd
-
     ```
-4.  TBC...
+4.  TBC... see https://github.com/algofoogle/tt07-raybox-zero/compare/0.0-tt07-base...1.0
 
 [tt07-verilog-template]: https://github.com/TinyTapeout/tt07-verilog-template
 
@@ -594,10 +476,129 @@ Frames are written to the current directory (`./src/rbz_basic_frame-???.ppm`).
 
 # TODO
 
-*   **Complete doco on updated tests now in `test/` and not `src/test/`**
-*   Document enabling GitHub Pages publishing via GHA.
-*   Change uo_outs to match Tiny VGA PMOD, or optional switching (e.g. Matt's clock version).
-*   Document and store bringup information for TT04 in the original repo.
-*   Refer backwards/forwards to new TT07 version, but also the testing branch and other commits done since 1.0 was submitted to TT04.
-*   Update README in 1.0-test branch.
+- [x] **Complete doco on updated tests now in `test/` and not `src/test/`**
+- [x] Change uo_outs to match Tiny VGA PMOD
+- [ ] Optional VGA output switching inc. to match TT04, my boards, and Matt's clock version
+- [ ] Document enabling GitHub Pages publishing via GHA.
+- [ ] Document and store bringup information for TT04 in the original repo.
+- [ ] Refer backwards/forwards to new TT07 version, but also the testing branch and other commits done since 1.0 was submitted to TT04.
+- [ ] Update README in 1.0-test branch.
 
+
+
+## iverilog 13-dev error messages when doing RTL sim
+
+When I tried doing TT04 RTL simulation with `make`, iverlog 13 (pre-release) gives all these errors, which are maybe a linting or `-g2012` thing:
+
+<details>
+<summary>Click to expand...</summary>
+
+<pre>
+rm -f results.xml
+make -f Makefile results.xml
+make[1]: Entering directory '/home/anton/projects/bringup-tt04-raybox-zero/src'
+mkdir -p sim_build
+/usr/local/bin/iverilog -o sim_build/sim.vvp -D COCOTB_SIM=1 -s tb -I /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl -f sim_build/cmds.f -g2012   /home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/fixed_point_params.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/helpers.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/debug_overlay.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/lzc.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/map_overlay.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/map_rom.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/reciprocal.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/row_render.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/vga_mux.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/vga_sync.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v /home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v /home/anton/projects/bringup-tt04-raybox-zero/src/top.v
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:28: error: Unable to bind wire/reg/memory `uo_out['sd7:'sd2]' in `tb'
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:39:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:28: error: Unable to elaborate r-value: uo_out['sd7:'sd2]
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:32: error: Unable to bind wire/reg/memory `uo_out['sd0]' in `tb'
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:39:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:32: error: Unable to elaborate r-value: uo_out['sd0]
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:33: error: Unable to bind wire/reg/memory `uo_out['sd1]' in `tb'
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:39:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:33: error: Unable to elaborate r-value: uo_out['sd1]
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:34: error: Unable to bind wire/reg/memory `uio_out['sd0]' in `tb'
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:41:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:34: error: Unable to elaborate r-value: uio_out['sd0]
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:35: error: Unable to bind wire/reg/memory `uio_out['sd1]' in `tb'
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:41:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/test/tb.v:35: error: Unable to elaborate r-value: uio_out['sd1]
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:72: error: Unable to bind wire/reg/memory `traced_texVinit' in `tb.uut.rbzero'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:209:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:72: error: Unable to elaborate r-value: (texV)+(traced_texVinit)
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:78: error: Unable to bind wire/reg/memory `traced_wall' in `tb.uut.rbzero'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:204:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:78: error: Failed to elaborate port expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:79: error: Unable to bind wire/reg/memory `traced_side' in `tb.uut.rbzero'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:205:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:79: error: Failed to elaborate port expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:80: error: Unable to bind wire/reg/memory `traced_size' in `tb.uut.rbzero'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:206:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:80: error: Failed to elaborate port expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:81: error: Unable to bind wire/reg/memory `traced_texu' in `tb.uut.rbzero'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:207:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:81: error: Failed to elaborate port expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:83: error: Unable to bind wire/reg/memory `floor_leak' in `tb.uut.rbzero'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:136:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:83: error: Failed to elaborate port expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:123: error: Unable to bind wire/reg/memory `ready_buffer' in `tb.uut.rbzero.pov'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:181:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:126: error: Unable to bind wire/reg/memory `spi_done' in `tb.uut.rbzero.pov'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:166:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/pov.v:126: error: Unable to elaborate condition expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:91: error: Unable to bind wire/reg/memory `spi_counter' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:101:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:91: error: Unable to elaborate r-value: (spi_counter)==((SPI_CMD_BITS)-('sd1))
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:93: error: Unable to bind wire/reg/memory `spi_counter' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:101:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:95: error: Unable to bind wire/reg/memory `spi_cmd' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:100:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:92: error: Unable to elaborate r-value: (spi_counter)==(((SPI_CMD_BITS)+(((spi_cmd)==(CMD_SKY))?(LEN_SKY):(((spi_cmd)==(CMD_FLOOR))?(LEN_FLOOR):(LEN_LEAK))))-('sd1))
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:49: error: Unable to bind wire/reg/memory `spi_cmd' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:100:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:49: error: Unable to bind wire/reg/memory `CMD_SKY' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:83:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:49: error: Unable to elaborate condition expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:50: error: Unable to bind wire/reg/memory `spi_cmd' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:100:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:50: error: Unable to bind wire/reg/memory `CMD_FLOOR' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:84:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:50: error: Unable to elaborate condition expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:51: error: Unable to bind wire/reg/memory `spi_cmd' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:100:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:51: error: Unable to bind wire/reg/memory `CMD_LEAK' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:85:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:51: error: Unable to elaborate condition expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:52: error: Unable to bind wire/reg/memory `ss_active' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:75:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:52: error: Unable to bind wire/reg/memory `sclk_rise' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:70:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:52: error: Unable to bind wire/reg/memory `spi_frame_end' in `tb.uut.rbzero.spi_registers'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:92:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/spi_registers.v:52: error: Unable to elaborate condition expression.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:128: error: Net color_sky is not defined in this context.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:134:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:128: error: Output port expression must support continuous assignment.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:128:      : Port 6 (sky) of spi_registers is connected to color_sky
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:129: error: Net color_floor is not defined in this context.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:135:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:129: error: Output port expression must support continuous assignment.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:129:      : Port 7 (floor) of spi_registers is connected to color_floor
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:130: error: Net floor_leak is not defined in this context.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:136:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:130: error: Output port expression must support continuous assignment.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:130:      : Port 8 (leak) of spi_registers is connected to floor_leak
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:151: error: Unable to bind wire/reg/memory `mul_out[('sd10)-('sd1):-('sd10)]' in `tb.uut.rbzero.wall_tracer'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:229:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:151: error: Unable to bind wire/reg/memory `side' in `tb.uut.rbzero.wall_tracer'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:246:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:151: error: Unable to elaborate r-value: (mul_out[('sd10)-('sd1):-('sd10)])+((side)?(playerX):(playerY))
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:152: error: Unable to bind wire/reg/memory `side' in `tb.uut.rbzero.wall_tracer'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:246:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:152: error: Unable to elaborate r-value: (side)?(ryi):(~(rxi))
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:219: error: Unable to bind wire/reg/memory `state' in `tb.uut.rbzero.wall_tracer'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:247:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:218: error: Unable to elaborate r-value: ((state)==(TracePrepX))?(stepDistX):(((state)==(TracePrepY))?(stepDistY):(((state)==(CalcTexU))?((side)?(rayDirX):(rayDirY)):((rcp_out)-(HALF_SIZE_CLIP))))
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:225: error: Unable to bind wire/reg/memory `state' in `tb.uut.rbzero.wall_tracer'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:247:      : A symbol with that name was declared here. Check for declaration after use.
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/wall_tracer.v:224: error: Unable to elaborate r-value: ((state)==(TracePrepX))?(partialX):(((state)==(TracePrepY))?(partialY):(visualWallDist))
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:94: error: Unable to bind wire/reg/memory `traced_texa' in `tb.uut.rbzero'
+/home/anton/projects/bringup-tt04-raybox-zero/src/raybox-zero/src/rtl/rbzero.v:208:      : A symbol with that name was declared here. Check for declaration after use.
+59 error(s) during elaboration.
+make[1]: *** [/home/anton/ttsetup@tt04/venv/lib/python3.9/site-packages/cocotb/share/makefiles/simulators/Makefile.icarus:81: sim_build/sim.vvp] Error 59
+make[1]: Leaving directory '/home/anton/projects/bringup-tt04-raybox-zero/src'
+make: *** [/home/anton/ttsetup@tt04/venv/lib/python3.9/site-packages/cocotb/share/makefiles/Makefile.inc:40: sim] Error 2
+</pre>
+
+</details>
